2011-05-09  Miloslav Trmač  <mitr@redhat.com>

	* src/server_add_admin.py (main): Only import readline when necessary,
	to avoid sending escape sequences to stdout when not interactive.

	* src/server_add_admin (main): New option --name.

	* src/server_add_admin.py (AddAdminConfiguration._read_configuration):
	Fix so that this doesn't crash on every start.

	* src/utils.py (create_basic_parser)
	(optparse_parse_options_only): Split from get_daemon_options().
	(get_daemon_options): Drop parameters batch, daemon_options: let
	original users of these parameters handle the parser directly.
	* src/server_add_admin.py (main)

	* src/server_create_db.py (main): Use utils.create_basic_parser and
	handle the parser directly.

	* src/server_add_admin.py (main): Beautify.

	* src/client.py (read_password): Move ...
	* src/utils.py (read_password): ... here.  All users updated.
	(optparse_add_batch_option): New function, extracted from
	client.py_handle_global_options.
	(get_daemon_options): New parameter batch.
	* src/client.py (handle_global_options): Use
	utils.optparse_add_batch_option().
	* src/server_add_admin.py (AddAdminConfiguration): New class.
	(main): Add --batch.  Use utils.read_password.  Only ask for password
	once in batch mode.

	* src/utils.py (get_daemon_options): Rename parameter daemonize to
	daemon_options.  Only handle --internal-log-dir and --internal-pid-dir
	if daemon_options is True.  All users updated.

	* config/server.conf (database-path): Fix default value.

	* src/utils.py (get_daemon_options): Add --internal-pid-dir.
	(create_pid_file, delete_pid_file): New parameter options.  All users
	updated.

	* src/bridge.py (main)
	* src/server.py (main): Remove the unused possibility to disable logging
	to a file, by editing settings.py.

	* src/utils.py (get_daemon_options): Add --internal-log-dir.
	* src/server.py (main)
	* src/bridge.py (main): Reflect --internal-log-dir, overriding
	settings.log_dir.

2011-05-06  Miloslav Trmač  <mitr@redhat.com>
